# turtlebot3_spanish

./: .gitignore  README.md  apriltag_demo.md
src/apriltag_ros/apriltag_ros/config/: tags.yaml
src/apriltag_ros/apriltag_ros/launch/: continuous_detection.launch
src/apriltag_simulation/: CMakeLists.txt  package.xml
src/apriltag_simulation/launch/: apriltag_simulation.launch
src/apriltag_simulation/models/apriltag_0/: model.config  model.sdf
src/apriltag_simulation/models/apriltag_0/materials/scripts/: apriltag_0.material
src/apriltag_simulation/models/apriltag_1/: model.config  model.sdf
src/apriltag_simulation/models/apriltag_1/materials/scripts/: apriltag_1.material
src/docker/: Dockerfile  build.sh  run.sh
src/turtlebot3/turtlebot3_navigation/rviz/: turtlebot3_navigation.rviz
src/turtlebot3_simulations/turtlebot3_gazebo/worlds/: turtlebot3_world.world
