<?xml version="1.0"?>
<package>
  <name>apriltag_simulation</name>
  <version>0.0.0</version>
  <description>Paquete que contiene los modelos y herramientas relacionados con Apriltags para su uso con Gazebo</description>

  <maintainer email="steven.desvars@gmail.com">Steven Desvars</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>apriltag_ros</build_depend>

  <run_depend>apriltag_ros</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models" />
  </export>
</package>
